Add multipart support
- Cleaning (Intellij code analysis)